--- a/task4.ipynb
+++ b/task4.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Divyanshu2309/EDA-and-MBA-analysis-on-instamart-data-set/blob/main/task4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "iNb7TL7NvhNr"
       },
       "source": [
@@ -688,8 +678,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTpGXQuSOhXCD1B1xa5kqc",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOTpGXQuSOhXCD1B1xa5kqc"
     },
     "kernelspec": {
       "display_name": "Python 3",
